separated owner from admin model
